# PhishGuard

./: README.md  api.py  cli.py  licence.txt  main.py  presentation.md  pyproject.toml  readme.md  requirements-hf.txt  requirements.txt
docs/: architecture.md  ia_et_sources.md  video_trophee_nsi.md
exemples/: resume_500_caracteres.txt
extension/: README.md  background.js  content.css  content.js  manifest.json  options.html  options.js
phishguard/: __init__.py  config.py  domain_tools.py  models.py  parser.py  utils.py
phishguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
phishguard/analyzers/: __init__.py  attachment_analyzer.py  benign_analyzer.py  domain_analyzer.py  header_analyzer.py  hybrid.py  ml.py  reputation_analyzer.py  text_analyzer.py  url_analyzer.py
sources/: __init__.py  api.py  cli.py  main.py
sources/extension/: background.js  content.css  content.js  manifest.json  options.html  options.js  readme.md
sources/phishguard/: __init__.py  config.py  domain_tools.py  models.py  parser.py  utils.py
sources/phishguard/analyzers/: __init__.py  attachment_analyzer.py  benign_analyzer.py  domain_analyzer.py  header_analyzer.py  hybrid.py  ml.py  reputation_analyzer.py  text_analyzer.py  url_analyzer.py
test/: test_eml_matrix.py
tests/: test_eml_matrix.py
