[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishguard"
version = "3.1.0"
description = "Local phishing email analyzer"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100",
  "uvicorn>=0.23",
  "python-multipart>=0.0.7",
  "pydantic>=2.0",
  "beautifulsoup4>=4.12",
  "joblib>=1.3",
  "scikit-learn>=1.3",
  "extract-msg>=0.45",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["phishguard*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
